<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/filter_by_room"
    android:title="Filtrer par salle" />
<item
    android:id="@+id/filter_by_date"
    android:title="Filtrer par date" />
<item
    android:id="@+id/clear_filters"
    android:title="Effacer les filtres" />
</menu>
