...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_meeting_room"
        android:contentDescription="image associée à la réunion"/>

    <TextView
        android:id="@+id/main_info"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintStart_toEndOf="@+id/avatar_meeting_room"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Réunion A" />

    <ImageButton
        android:id="@+id/delete_button"
...
